added first draft of openId connect

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/${privli.database.name}?serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=${privli.database.name}
 spring.datasource.password=${privli.database.name}
+
+security.oauth2.client.accessTokenUri=https://github.com/login/oauth/access_token
+security.oauth2.client.userAuthorizationUri=https://github.com/login/oauth/authorize
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.resource.userInfoUri=https://api.github.com/user
