--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=dev,dev_secrets
 
 spring.appplication.name=privli
 server.servlet.context-path=/${spring.appplication.name}
-
